tests/positive/pr118e1_mutual_move_borrow.safe
-- Test: pr118e1_mutual_move_borrow
-- Description: Move and borrow semantics apply to mutually recursive record families.
-- Expected: ACCEPT

package pr118e1_mutual_move_borrow

   subtype count is integer (0 to 100)

   type left_node
   type right_node

   type left_node is record
      value : count
      peer  : right_node

   type right_node is record
      value : count
      peer  : left_node

   function bump (item : mut not null left_node)
      item.value = item.value + 1

   function run
      source : not null left_node = (value = 5, peer = null)
      target : left_node = null

      bump (source)
      target = source
      target.value = 8
