tests/negative/neg_pr1111a_mut_receiver_constant.safe
package neg_pr1111a_mut_receiver_constant

   type counter is record
      value : integer;

   function (self : mut counter) bump
      self.value = self.value + 1;

   function total returns integer
      c : constant counter = (value = 0);

      c.bump ();
      return 0;
